--- a/hello-react/package.json
+++ b/hello-react/package.json
@@ -21,5 +21,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-promise-middleware": "^6.1.0",
+    "whatwg-fetch": "^3.0.0"
+  }
 }
